# cal-coder

./: CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  pipeline.py  pyproject.toml  schema.sql
.github/workflows/: publish-container.yml
analysis/: inferred-structure.md
cal_coder/: __init__.py  pipeline.py
