[project]
name = "cal-coder"
version = "1.0.0"
description = "Download California state legislative codes into a Postgres database running in a Docker container"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27",
    "psycopg[binary]>=3.1",
]

[tool.setuptools.packages.find]
include = ["cal_coder*"]
